tests/conformance/invalid/supervise_target_opaco.svp
-- supervise_target_opaco.svp — supervise sin constructor explícito de Supervisable

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin { APTO -> "ok"; NO_APTO -> "no"; INDETERMINADO -> "u"; }

cellspec CSup {
  b: 3;
  codomain: K3;
  semantics: Klin;
  role: Supervisor;
}

cellstate SSup {
  spec: CSup;
  vector: [Zero, Zero, Zero, Zero, Zero, Zero, Zero, Zero, Zero];
}

let ESup = evaluate(SSup);
let SV_bad = supervise(ESup, target: ESup);
